[package]
name = "catio"
version = "0.1.0"
edition = "2021"

[lib]
name = "catphys"
path = "src/catphys/lib.rs"

[[bin]]
name = "catio"
path = "src/main.rs"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image","ttf"]

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
panic = "unwind"

[profile.release]
opt-level = 3
codegen-units = 16
debug = false
strip = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true
